--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -671,34 +671,80 @@ tags:
 * [2015-11-23 将结果通过管道直接传给 Office Word](/powershell/tip/2015/11/23/piping-results-straight-into-office-word)
 * [2015-11-24 为大量文件建立拷贝备份](/powershell/tip/2015/11/24/creating-backup-copies-of-many-files)
 * [2015-11-25 理解 -f 操作符](/powershell/tip/2015/11/25/understanding-the-f-operator)
-* [2015-12-22 ___](/powershell/tip/2015/12/22/analyze-operating-system-by-organizational-unit)
-* [2015-12-23 ___](/powershell/tip/2015/12/23/get-list-of-operating-systems)
-* [2015-12-24 ___](/powershell/tip/2015/12/24/findinglogged-on-user)
-* [2015-12-25 ___](/powershell/tip/2015/12/25/get-automated-first-level-support-response)
-* [2015-12-28 ___](/powershell/tip/2015/12/28/force-user-to-change-password)
-* [2015-12-29 ___](/powershell/tip/2015/12/29/clearing-recycle-bin)
-* [2015-12-30 ___](/powershell/tip/2015/12/30/finding-recursive-ad-memberships)
-* [2015-12-31 ___](/powershell/tip/2015/12/31/managing-windows-firewall)
-* [2016-01-01 ___](/powershell/tip/2016/01/01/encode-and-decode-text-as-base64)
-* [2016-01-04 ___](/powershell/tip/2016/01/04/encoding-pictures)
-* [2016-01-05 ___](/powershell/tip/2016/01/05/loading-a-base64-encoded-picture-into-wpf-window)
-* [2016-01-06 ___](/powershell/tip/2016/01/06/understanding-powershell-streams)
-* [2016-01-07 ___](/powershell/tip/2016/01/07/use-get-ciminstance-with-dcom)
-* [2016-01-08 ___](/powershell/tip/2016/01/08/creating-new-objects-by-hash-table-conversion)
-* [2016-01-11 ___](/powershell/tip/2016/01/11/finding-current-file-system-path)
-* [2016-01-05 ___](/powershell/tip/2016/01/05/loading-a-base64-encoded-picture-into-wpf-window)
-* [2016-02-03 ___](/powershell/tip/2016/02/03/process-data-part-2)
-* [2016-02-04 ___](/powershell/tip/2016/02/04/process-data-part-3)
-* [2016-02-05 ___](/powershell/tip/2016/02/05/bringing-window-in-the-foreground)
-* [2016-02-08 ___](/powershell/tip/2016/02/08/counting-pages-in-a-word-document)
-* [2016-02-09 ___](/powershell/tip/2016/02/09/converting-currencies)
-* [2016-02-10 ___](/powershell/tip/2016/02/10/magic-underscore-variable)
-* [2016-02-11 ___](/powershell/tip/2016/02/11/send-text-to-notepad)
-* [2016-02-12 ___](/powershell/tip/2016/02/12/sending-objects-to-notepad)
-* [2016-02-15 ___](/powershell/tip/2016/02/15/who-is-listening-part-1)
-* [2016-02-16 ___](/powershell/tip/2016/02/16/who-is-listening-part-2)
-* [2016-02-17 ___](/powershell/tip/2016/02/17/getting-an-excuse)
-* [2016-02-18 ___](/powershell/tip/2016/02/18/do-not-mix-different-objects)
-* [2016-02-19 ___](/powershell/tip/2016/02/19/decorate-scripts-with-requires-statements)
-* [2016-02-22 ___](/powershell/tip/2016/02/22/using-workflows-to-parallelize-code)
-* [2016-02-23 ___](/powershell/tip/2016/02/23/using-net-types-directly)
+
+2015 年 12 月
+-------------
+* [2015-12-22 根据 OU 分析操作系统](/powershell/tip/2015/12/22/analyze-operating-system-by-organizational-unit)
+* [2015-12-23 获取操作系统清单](/powershell/tip/2015/12/23/get-list-of-operating-systems)
+* [2015-12-24 查询当前登录的用户名](/powershell/tip/2015/12/24/findinglogged-on-user)
+* [2015-12-25 自动获取重要的支持响应信息](/powershell/tip/2015/12/25/get-automated-first-level-support-response)
+* [2015-12-28 强制用户修改密码](/powershell/tip/2015/12/28/force-user-to-change-password)
+* [2015-12-29 清除回收站](/powershell/tip/2015/12/29/clearing-recycle-bin)
+* [2015-12-30 查找递归的 AD 成员](/powershell/tip/2015/12/30/finding-recursive-ad-memberships)
+* [2015-12-31 管理 Windows 防火墙](/powershell/tip/2015/12/31/managing-windows-firewall)
+
+2016 年
+=======
+
+2016 年 01 月
+-------------
+* [2016-01-01 用 Base64 编解码文本](/powershell/tip/2016/01/01/encode-and-decode-text-as-base64)
+* [2016-01-04 对图片编码](/powershell/tip/2016/01/04/encoding-pictures)
+* [2016-01-05 用 WPF 窗口加载 Base64 编码的图片](/powershell/tip/2016/01/05/loading-a-base64-encoded-picture-into-wpf-window)
+* [2016-01-06 理解 PowerShell 的流](/powershell/tip/2016/01/06/understanding-powershell-streams)
+* [2016-01-07 使用 DCOM 协议运行 Get-CimInstance](/powershell/tip/2016/01/07/use-get-ciminstance-with-dcom)
+* [2016-01-08 通过哈希表转换创建新的对象](/powershell/tip/2016/01/08/creating-new-objects-by-hash-table-conversion)
+* [2016-01-11 查找当前文件系统路径](/powershell/tip/2016/01/11/finding-current-file-system-path)
+
+2016 年 02 月
+-------------
+* [2016-02-02 处理数据（第 1 部分）](/powershell/tip/2016/02/02/process-data-part-1)
+* [2016-02-03 处理数据（第 2 部分）](/powershell/tip/2016/02/03/process-data-part-2)
+* [2016-02-04 处理数据（第 3 部分）](/powershell/tip/2016/02/04/process-data-part-3)
+* [2016-02-05 将窗口置于前台](/powershell/tip/2016/02/05/bringing-window-in-the-foreground)
+* [2016-02-08 统计一个 Word 文档中的页数](/powershell/tip/2016/02/08/counting-pages-in-a-word-document)
+* [2016-02-09 换算货币](/powershell/tip/2016/02/09/converting-currencies)
+* [2016-02-10 神奇的下划线变量](/powershell/tip/2016/02/10/magic-underscore-variable)
+* [2016-02-11 发送文本到记事本](/powershell/tip/2016/02/11/send-text-to-notepad)
+* [2016-02-12 将对象发送到记事本](/powershell/tip/2016/02/12/sending-objects-to-notepad)
+* [2016-02-15 谁在监听？（第一部分）](/powershell/tip/2016/02/15/who-is-listening-part-1)
+* [2016-02-16 谁在监听？（第二部分）](/powershell/tip/2016/02/16/who-is-listening-part-2)
+* [2016-02-17 得到一个借口](/powershell/tip/2016/02/17/getting-an-excuse)
+* [2016-02-18 不要混合不同的对象](/powershell/tip/2016/02/18/do-not-mix-different-objects)
+* [2016-02-19 用 #requires 语句装饰脚本](/powershell/tip/2016/02/19/decorate-scripts-with-requires-statements)
+* [2016-02-22 使用工作流来并发执行代码](/powershell/tip/2016/02/22/using-workflows-to-parallelize-code)
+* [2016-02-23 直接使用 .NET 类型](/powershell/tip/2016/02/23/using-net-types-directly)
+
+2016 年 08 月
+-------------
+* [2016-08-30 友好地使用 Robocopy](/powershell/tip/2016/08/30/using-friendly-robocopy)
+* [2016-08-31 替换类似 “Umlauts” 的特殊字符](/powershell/tip/2016/08/31/replacing-special-chars-like-umlauts)
+
+2016 年 09 月
+-------------
+* [2016-09-01 通过管道输入数据](/powershell/tip/2016/09/01/receiving-input-via-pipeline)
+* [2016-09-02 替换 CSV 文件列名](/powershell/tip/2016/09/02/replacing-csv-file-headers)
+* [2016-09-05 查找自启动项](/powershell/tip/2016/09/05/finding-auto-starts)
+* [2016-09-06 启用远程管理](/powershell/tip/2016/09/06/enabling-remote-administration)
+* [2016-09-07 检查（本地和远程的）硬盘容量](/powershell/tip/2016/09/07/checking-hard-drive-size-local-and-remote)
+* [2016-09-08 查看 ASCII 码](/powershell/tip/2016/09/08/finding-ascii-codes)
+* [2016-09-09 Saving PowerShell User Defaults](/powershell/tip/2016/09/09/saving-powershell-user-defaults)
+* [2016-09-12 颜色之周: 设置 PowerShell ISE 控制台的颜色](/powershell/tip/2016/09/12/color-week-setting-powershell-ise-console-colors)
+* [2016-09-13 色彩之周: 为 PowerShell ISE 指定命名的颜色](/powershell/tip/2016/09/13/color-week-using-clear-names-for-powershell-ise-colors)
+* [2016-09-14 色彩之周: 设置 PowerShell ISE 的背景色](/powershell/tip/2016/09/14/color-week-setting-powershell-ise-background-color)
+* [2016-09-15 色彩之周: 在 PowerShell ISE 控制台中使用透明度](/powershell/tip/2016/09/15/color-week-using-transparency-in-the-powershell-ise-console)
+* [2016-09-16 色彩之周: 改变错误信息颜色](/powershell/tip/2016/09/16/color-week-changing-error-message-colors)
+* [2016-09-19 色彩之周: 改变 PowerShell ISE 中的错误信息颜色](/powershell/tip/2016/09/19/color-week-changing-error-message-colors-in-the-powershell-ise)
+* [2016-09-20 色彩之周: 为 PowerShell 控制台中的符号着色](/powershell/tip/2016/09/20/color-week-using-token-colors-in-the-powershell-console)
+* [2016-09-21 用秒表测定脚本执行时间](/powershell/tip/2016/09/21/using-a-stopwatch-to-profile-scripts)
+* [2016-09-22 显示对话框](/powershell/tip/2016/09/22/displaying-message-boxes)
+* [2016-09-23 使用 UTC 时间](/powershell/tip/2016/09/23/working-with-utc-times)
+* [2016-09-26 Enum 之周: 枚举的自动转换](/powershell/tip/2016/09/26/enum-week-auto-conversion-for-enums)
+* [2016-09-27 Enum 之周: 列出枚举值](/powershell/tip/2016/09/27/enum-week-listing-enumeration-values)
+* [2016-09-28 Enum 之周: 理解枚举值](/powershell/tip/2016/09/28/enum-week-understanding-enumeration-values)
+* [2016-09-29 Enum 之周: 快速关闭 Cmdlet 错误提示](/powershell/tip/2016/09/29/enum-week-suppressing-cmdlet-errors-fast)
+* [2016-09-30 Enum 之周: PowerShell 5 中的枚举](/powershell/tip/2016/09/30/enum-week-enums-in-powershell-5)
+
+2016 年 10 月
+-------------
+* [2016-10-03 查找由 DHCP 分配的 IP 地址](/powershell/tip/2016/10/03/finding-ip-address-assigned-by-dhcp)
