(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -748,3 +748,13 @@ tags:
 2016 年 10 月
 -------------
 * [2016-10-03 查找由 DHCP 分配的 IP 地址](/powershell/tip/2016/10/03/finding-ip-address-assigned-by-dhcp)
+* [2016-10-04 查找 IP 地址的地理位置](/powershell/tip/2016/10/04/finding-location-of-ip-address)
+* [2016-10-05 查找公开 IP 地址](/powershell/tip/2016/10/05/finding-public-ip-address1)
+* [2016-10-06 在地图上定位您的地理位置](/powershell/tip/2016/10/06/geolocating-your-ip-on-a-map)
+* [2016-10-07 查找一个月中的第一天和最后一天](/powershell/tip/2016/10/07/finding-first-and-last-day-in-month)
+* [2016-10-10 在 Active Directory 中查找操作系统版本](/powershell/tip/2016/10/10/finding-operating-system-versions-in-active-directory)
+* [2016-10-11 查找操作系统架构信息](/powershell/tip/2016/10/11/finding-operating-system-architecture-information)
+* [2016-10-12 获取计算机的地理位置](/powershell/tip/2016/10/12/get-geolocation-of-computer)
+* [2016-10-13 将 SID 翻译为用户名](/powershell/tip/2016/10/13/translating-sid-to-username)
+* [2016-10-14 Getting List of Current Group Memberships](/powershell/tip/2016/10/14/getting-list-of-current-group-memberships)
+* [2016-10-17 查找隐藏的自启动程序](/powershell/tip/2016/10/17/finding-hidden-autostart-programs)
