--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -758,3 +758,6 @@ tags:
 * [2016-10-13 将 SID 翻译为用户名](/powershell/tip/2016/10/13/translating-sid-to-username)
 * [2016-10-14 Getting List of Current Group Memberships](/powershell/tip/2016/10/14/getting-list-of-current-group-memberships)
 * [2016-10-17 查找隐藏的自启动程序](/powershell/tip/2016/10/17/finding-hidden-autostart-programs)
+* [2016-10-18 理解二次远程连接问题](/powershell/tip/2016/10/18/understanding-the-double-hop-problem-in-remoting)
+* [2016-10-19 用 CredSSP 解决二次远程连接](/powershell/tip/2016/10/19/solving-double-hop-remoting-with-credssp)
+* [2016-10-20 在单侧启用 CredSSP](/powershell/tip/2016/10/20/enabling-credssp-trust-from-one-side)
