(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -761,3 +761,8 @@ tags:
 * [2016-10-18 理解二次远程连接问题](/powershell/tip/2016/10/18/understanding-the-double-hop-problem-in-remoting)
 * [2016-10-19 用 CredSSP 解决二次远程连接](/powershell/tip/2016/10/19/solving-double-hop-remoting-with-credssp)
 * [2016-10-20 在单侧启用 CredSSP](/powershell/tip/2016/10/20/enabling-credssp-trust-from-one-side)
+* [2016-10-21 PowerShell Remoting and HTTP 403 Error](/powershell/tip/2016/10/21/powershell-remoting-and-http-403-error)
+* [2016-10-24 检查电子邮件地址（或其它文本）中的非法字符](/powershell/tip/2016/10/24/checking-email-addresses-and-other-text-for-illegal-chars-directory)
+* [2016-10-25 查找多个非法字符](/powershell/tip/2016/10/25/finding-multiple-illegal-characters-directory)
+* [2016-10-26 查找文件路径中的非法字符（基于文件系统）](/powershell/tip/2016/10/26/finding-illegal-characters-in-paths-file-system-directory)
+* [2016-10-27 检查文件名的非法字符](/powershell/tip/2016/10/27/check-file-names-for-illegal-characters-directory)
