(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -766,3 +766,10 @@ tags:
 * [2016-10-25 查找多个非法字符](/powershell/tip/2016/10/25/finding-multiple-illegal-characters-directory)
 * [2016-10-26 查找文件路径中的非法字符（基于文件系统）](/powershell/tip/2016/10/26/finding-illegal-characters-in-paths-file-system-directory)
 * [2016-10-27 检查文件名的非法字符](/powershell/tip/2016/10/27/check-file-names-for-illegal-characters-directory)
+* [2016-10-28 Cmelet 错误报告的简单策略](/powershell/tip/2016/10/28/simple-strategy-for-cmdlet-error-reporting-directory)
+* [2016-10-31 从网站上下载图片](/powershell/tip/2016/10/31/downloading-pictures-from-website)
+
+2016 年 11 月
+-------------
+* [2016-11-01 在 PowerShell ISE 中获得 Cmdlet 的 IntelliSense](/powershell/tip/2016/11/01/getting-intellisense-for-cmdlet-powershell-ise)
+* [2016-11-02 用一行代码更新 PowerShell 帮助信息](/powershell/tip/2016/11/02/updating-powershell-help-with-one-liner)
