(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -773,3 +773,12 @@ tags:
 -------------
 * [2016-11-01 在 PowerShell ISE 中获得 Cmdlet 的 IntelliSense](/powershell/tip/2016/11/01/getting-intellisense-for-cmdlet-powershell-ise)
 * [2016-11-02 用一行代码更新 PowerShell 帮助信息](/powershell/tip/2016/11/02/updating-powershell-help-with-one-liner)
+* [2016-11-03 获取 Cmdlet 参数的帮助](/powershell/tip/2016/11/03/getting-help-for-cmdlet-parameters)
+* [2016-11-04 （分别）测试文件和文件夹](/powershell/tip/2016/11/04/testing-files-and-folders-separately)
+* [2016-11-07 获取PowerShell Gallery 模块的最新版本](/powershell/tip/2016/11/07/getting-latest-powershell-gallery-module-version)
+* [2016-11-08 利用命令行历史](/powershell/tip/2016/11/08/exploiting-your-command-history)
+* [2016-11-09 创建新对象的快速方法](/powershell/tip/2016/11/09/fast-approach-to-creating-new-objects)
+* [2016-11-10 PSCustomObject 到底如何工作](/powershell/tip/2016/11/10/how-pscustomobject-really-works)
+* [2016-11-11 使用 Add-Member 时请注意！](/powershell/tip/2016/11/11/careful-with-add-member)
+* [2016-11-14 本地帐户的内置支持](/powershell/tip/2016/11/14/built-in-support-for-local-accounts)
+* [2016-11-15 systeminfo.exe 的最新替代](/powershell/tip/2016/11/15/modern-replacement-for-systeminfo-exe)
