(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -782,3 +782,6 @@ tags:
 * [2016-11-11 使用 Add-Member 时请注意！](/powershell/tip/2016/11/11/careful-with-add-member)
 * [2016-11-14 本地帐户的内置支持](/powershell/tip/2016/11/14/built-in-support-for-local-accounts)
 * [2016-11-15 systeminfo.exe 的最新替代](/powershell/tip/2016/11/15/modern-replacement-for-systeminfo-exe)
+* [2016-11-16 在同一台机器上运行 32 位代码](/powershell/tip/2016/11/16/running-32-bit-code-on-the-same-machine)
+* [2016-11-17 探索函数源码](/powershell/tip/2016/11/17/exploring-function-source-code)
+* [2016-11-18 PowerShell 5.1 中的时区管理](/powershell/tip/2016/11/18/time-zone-management-in-powershell-5-1)
