(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -785,3 +785,9 @@ tags:
 * [2016-11-16 在同一台机器上运行 32 位代码](/powershell/tip/2016/11/16/running-32-bit-code-on-the-same-machine)
 * [2016-11-17 探索函数源码](/powershell/tip/2016/11/17/exploring-function-source-code)
 * [2016-11-18 PowerShell 5.1 中的时区管理](/powershell/tip/2016/11/18/time-zone-management-in-powershell-5-1)
+* [2016-11-21 隐藏启动 PowerShell](/powershell/tip/2016/11/21/launching-powershell-hidden)
+* [2016-11-22 在 PowerShell 函数中使用命名的函数](/powershell/tip/2016/11/22/using-named-parameters-in-powershell-functions)
+* [2016-11-23 禁止按位置的参数](/powershell/tip/2016/11/23/prohibiting-positional-parameters)
+* [2016-11-24 修复 PowerShell 5 帮助的 Bug](/powershell/tip/2016/11/24/fixing-powershell-5-help-bug)
+* [2016-11-25 轻轻跳进 PowerShell 版本的丛林](/powershell/tip/2016/11/25/shed-light-into-the-powershell-version-jungle)
+* [2016-11-28 像其它应用程序一样启动](/powershell/tip/2016/11/28/launching-applications-as-someone-else)
