--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -790,4 +790,14 @@ tags:
 * [2016-11-23 禁止按位置的参数](/powershell/tip/2016/11/23/prohibiting-positional-parameters)
 * [2016-11-24 修复 PowerShell 5 帮助的 Bug](/powershell/tip/2016/11/24/fixing-powershell-5-help-bug)
 * [2016-11-25 轻轻跳进 PowerShell 版本的丛林](/powershell/tip/2016/11/25/shed-light-into-the-powershell-version-jungle)
-* [2016-11-28 像其它应用程序一样启动](/powershell/tip/2016/11/28/launching-applications-as-someone-else)
+* [2016-11-28 用其他身份启动程序](/powershell/tip/2016/11/28/launching-applications-as-someone-else)
+* [2016-11-29 高级错误处理：重新抛出异常](/powershell/tip/2016/11/29/advanced-error-handling-rethrowing-exceptions)
+* [2016-11-30 捕获 Native EXE 的错误](/powershell/tip/2016/11/30/catching-errors-from-native-exes)
+
+2016 年 12 月
+-------------
+* [2016-12-01 使用自定义域](/powershell/tip/2016/12/01/using-custom-scopes)
+* [2016-12-02 使用自定义作用域来屏蔽任何输出](/powershell/tip/2016/12/02/using-custom-scopes-to-discard-any-output)
+* [2016-12-06 同时使用 -Force 和 -WhatIf 时请注意](/powershell/tip/2016/12/06/watch-out-when-combining-force-and-whatif)
+* [2016-12-07 安全地对文本加解密](/powershell/tip/2016/12/07/safely-encrypting-and-decrypting-text)
+* [2016-12-08 最常用的动词](/powershell/tip/2016/12/08/most-popular-verbs)
