(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -798,6 +798,7 @@ tags:
 -------------
 * [2016-12-01 使用自定义域](/powershell/tip/2016/12/01/using-custom-scopes)
 * [2016-12-02 使用自定义作用域来屏蔽任何输出](/powershell/tip/2016/12/02/using-custom-scopes-to-discard-any-output)
+* [2016-12-05 创建文件共享](/powershell/tip/2016/12/05/creating-file-shares)
 * [2016-12-06 同时使用 -Force 和 -WhatIf 时请注意](/powershell/tip/2016/12/06/watch-out-when-combining-force-and-whatif)
 * [2016-12-07 安全地对文本加解密](/powershell/tip/2016/12/07/safely-encrypting-and-decrypting-text)
 * [2016-12-08 最常用的动词](/powershell/tip/2016/12/08/most-popular-verbs)
