--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -802,3 +802,7 @@ tags:
 * [2016-12-06 同时使用 -Force 和 -WhatIf 时请注意](/powershell/tip/2016/12/06/watch-out-when-combining-force-and-whatif)
 * [2016-12-07 安全地对文本加解密](/powershell/tip/2016/12/07/safely-encrypting-and-decrypting-text)
 * [2016-12-08 最常用的动词](/powershell/tip/2016/12/08/most-popular-verbs)
+* [2016-12-09 查找不合规的命令动词](/powershell/tip/2016/12/09/finding-unapproved-verbs)
+* [2016-12-12 分析结果出现次数（不浪费内存）](/powershell/tip/2016/12/12/analyzing-result-frequencies-without-wasting-memory)
+* [2016-12-13 按属性值分割结果](/powershell/tip/2016/12/13/separating-results-by-property-value)
+* [2016-12-14 对启用 PIN 的用户使用 PowerShell Remoting](/powershell/tip/2016/12/14/using-powershell-remoting-with-pin-enabled-accounts)
