(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -806,3 +806,5 @@ tags:
 * [2016-12-12 分析结果出现次数（不浪费内存）](/powershell/tip/2016/12/12/analyzing-result-frequencies-without-wasting-memory)
 * [2016-12-13 按属性值分割结果](/powershell/tip/2016/12/13/separating-results-by-property-value)
 * [2016-12-14 对启用 PIN 的用户使用 PowerShell Remoting](/powershell/tip/2016/12/14/using-powershell-remoting-with-pin-enabled-accounts)
+* [2016-12-15 等待进程退出](/powershell/tip/2016/12/15/waiting-for-processes-to-exit)
+* [2016-12-16 创建 Time Span](/powershell/tip/2016/12/16/creating-time-spans1)
