(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -808,3 +808,8 @@ tags:
 * [2016-12-14 对启用 PIN 的用户使用 PowerShell Remoting](/powershell/tip/2016/12/14/using-powershell-remoting-with-pin-enabled-accounts)
 * [2016-12-15 等待进程退出](/powershell/tip/2016/12/15/waiting-for-processes-to-exit)
 * [2016-12-16 创建 Time Span](/powershell/tip/2016/12/16/creating-time-spans1)
+* [2016-12-19 系统内存、单位和四舍五入](/powershell/tip/2016/12/19/system-memory-units-and-rounding)
+* [2016-12-20 检测文件或文件夹](/powershell/tip/2016/12/20/test-for-file-or-folder)
+* [2016-12-21 捕获 Linux 输出](/powershell/tip/2016/12/21/capturing-linux-output)
+* [2016-12-22 使用“Exit”和 Linux 通信](/powershell/tip/2016/12/22/using-exit-to-communicate-with-linux)
+* [2016-12-23 在 PowerShell 中创建 WinForms GUI 界面](/powershell/tip/2016/12/23/creating-winforms-guis-in-powershell)
