(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -813,3 +813,14 @@ tags:
 * [2016-12-21 捕获 Linux 输出](/powershell/tip/2016/12/21/capturing-linux-output)
 * [2016-12-22 使用“Exit”和 Linux 通信](/powershell/tip/2016/12/22/using-exit-to-communicate-with-linux)
 * [2016-12-23 在 PowerShell 中创建 WinForms GUI 界面](/powershell/tip/2016/12/23/creating-winforms-guis-in-powershell)
+* [2016-12-26 复制着色过的代码](/powershell/tip/2016/12/26/copy-color-coded-code)
+* [2016-12-27 扩展 Robocopy](/powershell/tip/2016/12/27/extending-robocopy)
+* [2016-12-28 创建简单的 UI](/powershell/tip/2016/12/28/creating-simple-uis)
+* [2016-12-30 解析纯文本（第一部分）](/powershell/tip/2016/12/30/parsing-raw-text-part-1)
+
+2017 年
+=======
+
+2017 年 01 月
+-------------
+* [2017-01-02 解析纯文本（第二部分）](/powershell/tip/2017/01/02/parsing-raw-text-part-2)
