(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -816,6 +816,7 @@ tags:
 * [2016-12-26 复制着色过的代码](/powershell/tip/2016/12/26/copy-color-coded-code)
 * [2016-12-27 扩展 Robocopy](/powershell/tip/2016/12/27/extending-robocopy)
 * [2016-12-28 创建简单的 UI](/powershell/tip/2016/12/28/creating-simple-uis)
+* [2016-12-29 调整简单界面](/powershell/tip/2016/12/29/adjusting-simple-uis)
 * [2016-12-30 解析纯文本（第一部分）](/powershell/tip/2016/12/30/parsing-raw-text-part-1)
 
 2017 年
@@ -824,3 +825,13 @@ tags:
 2017 年 01 月
 -------------
 * [2017-01-02 解析纯文本（第二部分）](/powershell/tip/2017/01/02/parsing-raw-text-part-2)
+* [2017-01-03 解析纯文本（第三部分）](/powershell/tip/2017/01/03/parsing-raw-text-part-3)
+* [2017-01-04 管理凭据（第一部分）](/powershell/tip/2017/01/04/managing-credentials-part-1)
+* [2017-01-05 管理凭据（第二部分）](/powershell/tip/2017/01/05/managing-credentials-part-2)
+* [2017-01-06 管理凭据（第三部分）](/powershell/tip/2017/01/06/managing-credentials-part-3)
+* [2017-01-09 管理凭据（第四部分）](/powershell/tip/2017/01/09/managing-credentials-part-4)
+* [2017-01-10 管理凭据（第五部分）](/powershell/tip/2017/01/10/managing-credentials-part-5)
+* [2017-01-11 小心 Get-Credential 和 SecureString](/powershell/tip/2017/01/11/careful-with-get-credential-and-securestrings)
+* [2017-01-12 获取 AD 用户属性](/powershell/tip/2017/01/12/getting-ad-user-attributes)
+* [2017-01-13 管理本地用户](/powershell/tip/2017/01/13/managing-local-users)
+* [2017-01-16 探索本地账户管理 cmdlet](/powershell/tip/2017/01/16/exploring-local-account-management-cmdlets)
