(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -841,3 +841,6 @@ tags:
 * [2017-01-20 隐藏进度条](/powershell/tip/2017/01/20/hiding-progress-bars)
 * [2017-01-23 在资源管理器中打开 PowerShell](/powershell/tip/2017/01/23/opening-powershell-inside-explorer)
 * [2017-01-24 检查整数的位数](/powershell/tip/2017/01/24/checking-number-of-digits-in-integer)
+* [2017-01-25 增加和删除反斜杠](/powershell/tip/2017/01/25/adding-and-removing-backslashes)
+* [2017-01-26 语音之周：使用语音讲述人](/powershell/tip/2017/01/26/speech-week-using-a-speech-synthesizer)
+* [2017-01-27 语音之周：更改讲述人的语音](/powershell/tip/2017/01/27/speech-week-using-different-voices-with-speech-synthesizer)
