(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -844,3 +844,11 @@ tags:
 * [2017-01-25 增加和删除反斜杠](/powershell/tip/2017/01/25/adding-and-removing-backslashes)
 * [2017-01-26 语音之周：使用语音讲述人](/powershell/tip/2017/01/26/speech-week-using-a-speech-synthesizer)
 * [2017-01-27 语音之周：更改讲述人的语音](/powershell/tip/2017/01/27/speech-week-using-different-voices-with-speech-synthesizer)
+* [2017-01-30 语音之周：记录语音到文件合成器](/powershell/tip/2017/01/30/speech-week-recording-voice-to-file-synthesizer)
+* [2017-01-31 语音之周：使用语音合成器高级选项](/powershell/tip/2017/01/31/speech-week-using-advanced-speech-synthesizer-options-synthesizer)
+
+2017 年 02 月
+-------------
+* [2017-02-01 加速 New-Object Synthesizer](/powershell/tip/2017/02/01/speeding-up-new-object-synthesizer)
+* [2017-02-02 确定个人年龄](/powershell/tip/2017/02/02/determining-person-age)
+* [2017-02-03 Using “Using Namespace”](/powershell/tip/2017/02/03/using-using-namespace)
