(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -851,4 +851,4 @@ tags:
 -------------
 * [2017-02-01 加速 New-Object Synthesizer](/powershell/tip/2017/02/01/speeding-up-new-object-synthesizer)
 * [2017-02-02 确定个人年龄](/powershell/tip/2017/02/02/determining-person-age)
-* [2017-02-03 Using “Using Namespace”](/powershell/tip/2017/02/03/using-using-namespace)
+* [2017-02-06 使用类（创建对象 - 第一部分）](/powershell/tip/2017/02/06/using-classes-creating-objects-part-1)
