(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -853,3 +853,7 @@ tags:
 * [2017-02-02 确定个人年龄](/powershell/tip/2017/02/02/determining-person-age)
 * [2017-02-03 使用命名空间](/powershell/tip/2017/02/03/using-using-namespace)
 * [2017-02-06 使用类（创建对象 - 第一部分）](/powershell/tip/2017/02/06/using-classes-creating-objects-part-1)
+* [2017-02-07 使用类（初始化属性 - 第二部分）](/powershell/tip/2017/02/07/using-classes-initializing-properties-part-2)
+* [2017-02-08 使用类（增加方法 - 第三部分）](/powershell/tip/2017/02/08/using-classes-adding-methods-part-3)
+* [2017-02-09 使用类（重载 - 第四部分）](/powershell/tip/2017/02/09/using-classes-overloading-part-4)
+* [2017-02-10 使用类（构造函数 - 第四部分）](/powershell/tip/2017/02/10/using-classes-constructors-part-5)
