--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -857,3 +857,7 @@ tags:
 * [2017-02-08 使用类（增加方法 - 第三部分）](/powershell/tip/2017/02/08/using-classes-adding-methods-part-3)
 * [2017-02-09 使用类（重载 - 第四部分）](/powershell/tip/2017/02/09/using-classes-overloading-part-4)
 * [2017-02-10 使用类（构造函数 - 第四部分）](/powershell/tip/2017/02/10/using-classes-constructors-part-5)
+* [2017-02-13 Classes (Static Members - Part 6)](/powershell/tip/2017/02/13/classes-static-members-part-6)
+* [2017-02-14 Checking Execution Policy](/powershell/tip/2017/02/14/checking-execution-policy)
+* [2017-02-15 检测有问题的 Execution Policy Settings](/powershell/tip/2017/02/15/identifying-problematic-execution-policy-settings)
+* [2017-02-16 Free Guides to Start With PowerShell](/powershell/tip/2017/02/16/free-guides-to-start-with-powershell)
