(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -861,3 +861,5 @@ tags:
 * [2017-02-14 检查 Execution Policy](/powershell/tip/2017/02/14/checking-execution-policy)
 * [2017-02-15 检测有问题的 Execution Policy 设置](/powershell/tip/2017/02/15/identifying-problematic-execution-policy-settings)
 * [2017-02-16 免费的 PowerShell 起步指南](/powershell/tip/2017/02/16/free-guides-to-start-with-powershell)
+* [2017-02-20 接触 PowerShell 6.0](/powershell/tip/2017/02/20/playing-with-powershell-6-0)
+* [2017-02-21 检测宿主](/powershell/tip/2017/02/21/checking-host)
