(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -863,3 +863,7 @@ tags:
 * [2017-02-16 免费的 PowerShell 起步指南](/powershell/tip/2017/02/16/free-guides-to-start-with-powershell)
 * [2017-02-20 接触 PowerShell 6.0](/powershell/tip/2017/02/20/playing-with-powershell-6-0)
 * [2017-02-21 检测宿主](/powershell/tip/2017/02/21/checking-host)
+* [2017-02-22 设置环境变量](/powershell/tip/2017/02/22/setting-environment-variables)
+* [2017-02-23 Reading Environment Variables Freshly](/powershell/tip/2017/02/23/reading-environment-variables-freshly)
+* [2017-02-24 用 Pester Tests 做测试](/powershell/tip/2017/02/24/using-pester-tests-to-test-anything)
+* [2017-02-27 显示或隐藏窗口](/powershell/tip/2017/02/27/show-or-hide-windows)
