(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -867,3 +867,10 @@ tags:
 * [2017-02-23 Reading Environment Variables Freshly](/powershell/tip/2017/02/23/reading-environment-variables-freshly)
 * [2017-02-24 用 Pester Tests 做测试](/powershell/tip/2017/02/24/using-pester-tests-to-test-anything)
 * [2017-02-27 显示或隐藏窗口](/powershell/tip/2017/02/27/show-or-hide-windows)
+* [2017-02-28 Power Shell 5 的类继承（第一部分）](/powershell/tip/2017/02/28/inheriting-classes-in-powershell-5-part-1)
+
+2017 年 03 月
+-------------
+* [2017-03-01 Power Shell 5 的类继承（第二部分）](/powershell/tip/2017/03/01/inheriting-classes-in-powershell-5-part-2)
+* [2017-03-02 使用泛型](/powershell/tip/2017/03/02/working-with-generics)
+* [2017-03-03 管理比特标志位（第一部分）](/powershell/tip/2017/03/03/managing-bit-flags-part-1)
