(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -874,3 +874,4 @@ tags:
 * [2017-03-01 Power Shell 5 的类继承（第二部分）](/powershell/tip/2017/03/01/inheriting-classes-in-powershell-5-part-2)
 * [2017-03-02 使用泛型](/powershell/tip/2017/03/02/working-with-generics)
 * [2017-03-03 管理比特标志位（第一部分）](/powershell/tip/2017/03/03/managing-bit-flags-part-1)
+* [2017-03-06 管理比特标志位（第二部分）](/powershell/tip/2017/03/06/managing-bit-flags-part-2)
