--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -875,3 +875,6 @@ tags:
 * [2017-03-02 使用泛型](/powershell/tip/2017/03/02/working-with-generics)
 * [2017-03-03 管理比特标志位（第一部分）](/powershell/tip/2017/03/03/managing-bit-flags-part-1)
 * [2017-03-06 管理比特标志位（第二部分）](/powershell/tip/2017/03/06/managing-bit-flags-part-2)
+* [2017-03-07 管理比特标志位（第三部分）](/powershell/tip/2017/03/07/managing-bit-flags-part-3)
+* [2017-03-08 管理比特标志位（第四部分）](/powershell/tip/2017/03/08/managing-bit-flags-part-4)
+* [2017-03-09 探索对象](/powershell/tip/2017/03/09/explore-objects)
