(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -878,3 +878,9 @@ tags:
 * [2017-03-07 管理比特标志位（第三部分）](/powershell/tip/2017/03/07/managing-bit-flags-part-3)
 * [2017-03-08 管理比特标志位（第四部分）](/powershell/tip/2017/03/08/managing-bit-flags-part-4)
 * [2017-03-09 探索对象](/powershell/tip/2017/03/09/explore-objects)
+* [2017-03-10 危险的临时文件！](/powershell/tip/2017/03/10/dangerous-temp-files)
+* [2017-03-13 Exploring Type Accelerators](/powershell/tip/2017/03/13/exploring-type-accelerators)
+* [2017-03-14 快速创建对象数组](/powershell/tip/2017/03/14/creating-object-arrays-on-the-fly)
+* [2017-03-15 Where-Object 和 .Where()](/powershell/tip/2017/03/15/where-object-and-where)
+* [2017-03-16 查找所有含桌面的配置文件](/powershell/tip/2017/03/16/finding-all-profiles-with-desktop)
+* [2017-03-17 限制文本的长度（第一部分）](/powershell/tip/2017/03/17/texts-with-maximum-length-part-1)
