(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -884,3 +884,6 @@ tags:
 * [2017-03-15 Where-Object 和 .Where()](/powershell/tip/2017/03/15/where-object-and-where)
 * [2017-03-16 查找所有含桌面的配置文件](/powershell/tip/2017/03/16/finding-all-profiles-with-desktop)
 * [2017-03-17 限制文本的长度（第一部分）](/powershell/tip/2017/03/17/texts-with-maximum-length-part-1)
+* [2017-03-20 限制文本的长度（第二部分）](/powershell/tip/2017/03/20/texts-with-maximum-length-part-2)
+* [2017-03-21 不带动词运行 Cmdlet](/powershell/tip/2017/03/21/running-cmdlets-without-verb)
+* [2017-03-22 调用一个脚本块](/powershell/tip/2017/03/22/invoking-a-script-block)
