(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -864,7 +864,7 @@ tags:
 * [2017-02-20 接触 PowerShell 6.0](/2017/02/20/playing-with-powershell-6-0)
 * [2017-02-21 检测宿主](/2017/02/21/checking-host)
 * [2017-02-22 设置环境变量](/2017/02/22/setting-environment-variables)
-* [2017-02-23 Reading Environment Variables Freshly](/2017/02/23/reading-environment-variables-freshly)
+* [2017-02-23 读取最新的环境变量](/2017/02/23/reading-environment-variables-freshly)
 * [2017-02-24 用 Pester Tests 做测试](/2017/02/24/using-pester-tests-to-test-anything)
 * [2017-02-27 显示或隐藏窗口](/2017/02/27/show-or-hide-windows)
 * [2017-02-28 Power Shell 5 的类继承（第一部分）](/2017/02/28/inheriting-classes-in-powershell-5-part-1)
@@ -879,7 +879,7 @@ tags:
 * [2017-03-08 管理比特标志位（第四部分）](/2017/03/08/managing-bit-flags-part-4)
 * [2017-03-09 探索对象](/2017/03/09/explore-objects)
 * [2017-03-10 危险的临时文件！](/2017/03/10/dangerous-temp-files)
-* [2017-03-13 Exploring Type Accelerators](/2017/03/13/exploring-type-accelerators)
+* [2017-03-13 探索类型加速器](/2017/03/13/exploring-type-accelerators)
 * [2017-03-14 快速创建对象数组](/2017/03/14/creating-object-arrays-on-the-fly)
 * [2017-03-15 Where-Object 和 .Where()](/2017/03/15/where-object-and-where)
 * [2017-03-16 查找所有含桌面的配置文件](/2017/03/16/finding-all-profiles-with-desktop)
@@ -887,3 +887,9 @@ tags:
 * [2017-03-20 限制文本的长度（第二部分）](/2017/03/20/texts-with-maximum-length-part-2)
 * [2017-03-21 不带动词运行 Cmdlet](/2017/03/21/running-cmdlets-without-verb)
 * [2017-03-22 调用一个脚本块](/2017/03/22/invoking-a-script-block)
+* [2017-03-23 按区域转换数据](/2017/03/23/casting-data-with-culture)
+* [2017-03-24 使用 PowerShell 参数验证器](/2017/03/24/using-a-powershell-parameter-validator)
+* [2017-03-27 处理 LDAP 和日期](/2017/03/27/working-with-ldap-and-dates)
+* [2017-03-28 使用通配符确定数组是否包含值](/2017/03/28/determine-if-array-contains-value-using-wildcards)
+* [2017-03-29 管理 NTFS 权限](/2017/03/29/managing-ntfs-permissions1)
+* [2017-03-30 到处 ActiveDirectory 模块](/2017/03/30/exporting-activedirectory-module)
