(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -894,3 +894,8 @@ tags:
 * [2017-03-29 管理 NTFS 权限](/2017/03/29/managing-ntfs-permissions1)
 * [2017-03-30 到处 ActiveDirectory 模块](/2017/03/30/exporting-activedirectory-module)
 * [2017-03-31 检查证书详细信息](/2017/03/31/examining-certificate-details)
+
+2017 年 04 月
+-------------
+* [2017-04-03 检查变量是否为 $NULL](/2017/04/03/comparing-against-null)
+* [2017-04-04 检查操作系统版本](/2017/04/04/checking-operating-system-version)
