(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -899,3 +899,6 @@ tags:
 -------------
 * [2017-04-03 检查变量是否为 $NULL](/2017/04/03/comparing-against-null)
 * [2017-04-04 检查操作系统版本](/2017/04/04/checking-operating-system-version)
+* [2017-04-05 自动定义函数的别名](/2017/04/05/auto-declaring-alias-names-for-functions)
+* [2017-04-06 检测字符代码 0](/2017/04/06/detecting-character-code-0)
+* [2017-04-07 处理长文件路径](/2017/04/07/dealing-with-long-file-paths)
