(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -902,3 +902,10 @@ tags:
 * [2017-04-05 自动定义函数的别名](/2017/04/05/auto-declaring-alias-names-for-functions)
 * [2017-04-06 检测字符代码 0](/2017/04/06/detecting-character-code-0)
 * [2017-04-07 处理长文件路径](/2017/04/07/dealing-with-long-file-paths)
+* [2017-04-10 请注意别名](/2017/04/10/beware-of-aliases)
+* [2017-04-11 直接导入证书（第一部分）](/2017/04/11/directly-importing-certificates-part-1)
+* [2017-04-12 直接导入证书（第二部分）](/2017/04/12/directly-importing-certificates-part-2)
+* [2017-04-13 将时钟周期转换为日期和时间（第一部分）](/2017/04/13/converting-ticks-to-date-and-time-part-1)
+* [2017-04-14 将时钟周期转换为日期和时间（第二部分）](/2017/04/14/converting-ticks-to-date-and-time-part-2)
+* [2017-04-17 用区域性固定的方式序列化日期和时间](/2017/04/17/serializing-date-and-time-in-a-culture-invariant-way)
+* [2017-04-18 确认重复的 CSV 表头（第一部分）](/2017/04/18/identifying-duplicate-csv-headers-part-1)
