(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -909,3 +909,4 @@ tags:
 * [2017-04-14 将时钟周期转换为日期和时间（第二部分）](/2017/04/14/converting-ticks-to-date-and-time-part-2)
 * [2017-04-17 用区域性固定的方式序列化日期和时间](/2017/04/17/serializing-date-and-time-in-a-culture-invariant-way)
 * [2017-04-18 确认重复的 CSV 表头（第一部分）](/2017/04/18/identifying-duplicate-csv-headers-part-1)
+* [2017-04-19 确认重复的 CSV 表头（第二部分）](/2017/04/19/identifying-duplicate-csv-headers-part-2)
