(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -910,3 +910,5 @@ tags:
 * [2017-04-17 用区域性固定的方式序列化日期和时间](/2017/04/17/serializing-date-and-time-in-a-culture-invariant-way)
 * [2017-04-18 确认重复的 CSV 表头（第一部分）](/2017/04/18/identifying-duplicate-csv-headers-part-1)
 * [2017-04-19 确认重复的 CSV 表头（第二部分）](/2017/04/19/identifying-duplicate-csv-headers-part-2)
+* [2017-04-20 检测 CSV 的分隔符](/2017/04/20/identifying-csv-delimiter)
+* [2017-04-21 弹出 CD 驱动器](/2017/04/21/ejecting-cd-drive)
