(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -912,3 +912,4 @@ tags:
 * [2017-04-19 确认重复的 CSV 表头（第二部分）](/2017/04/19/identifying-duplicate-csv-headers-part-2)
 * [2017-04-20 检测 CSV 的分隔符](/2017/04/20/identifying-csv-delimiter)
 * [2017-04-21 弹出 CD 驱动器](/2017/04/21/ejecting-cd-drive)
+* [2017-04-24 评估 Exit Code（也叫做 Error Level – 第一部分）](/2017/04/24/evaluating-exit-codes-aka-error-level-part-1)
