(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -915,3 +915,9 @@ tags:
 * [2017-04-24 评估 Exit Code（也叫做 Error Level – 第一部分）](/2017/04/24/evaluating-exit-codes-aka-error-level-part-1)
 * [2017-04-25 评估 Exit Code（也叫做 Error Level – 第二部分）](/2017/04/25/evaluating-exit-codes-aka-error-level-part-2)
 * [2017-04-26 评估 Exit Code（也叫做 Error Level – 第三部分）](/2017/04/26/evaluating-exit-codes-aka-error-level-part-3)
+* [2017-04-27 克隆文件夹结构（含 NTFS 权限） – 第一部分](/2017/04/27/cloning-folder-structures-with-ntfs-permissions-part-1)
+* [2017-04-28 克隆文件夹结构（含 NTFS 权限） – 第二部分](/2017/04/28/cloning-folder-structures-with-ntfs-permissions-part-2)
+
+2017 年 05 月
+-------------
+* [2017-05-01 将 AD 用户转为哈希表](/2017/05/01/turning-ad-user-into-a-hash-table)
