(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -928,3 +928,6 @@ tags:
 * [2017-05-08 HTML 编码](/2017/05/08/html-encoding)
 * [2017-05-09 HTML 高级编码](/2017/05/09/html-encoding-advanced)
 * [2017-05-10 .Replace() 和 -replace 的区别](/2017/05/10/how-replace-and-replace-differ)
+* [2017-05-11 在远程系统中安装 MSI](/2017/05/11/installing-msi-on-remote-system)
+* [2017-05-12 使用剪贴板来传输数据和结果](/2017/05/12/using-clipboard-to-transfer-data-and-results)
+* [2017-05-15 将二进制字符串转为整形](/2017/05/15/converting-binary-string-to-integer)
