(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -931,3 +931,5 @@ tags:
 * [2017-05-11 在远程系统中安装 MSI](/2017/05/11/installing-msi-on-remote-system)
 * [2017-05-12 使用剪贴板来传输数据和结果](/2017/05/12/using-clipboard-to-transfer-data-and-results)
 * [2017-05-15 将二进制字符串转为整形](/2017/05/15/converting-binary-string-to-integer)
+* [2017-05-16 按位移位](/2017/05/16/bitwise-shift)
+* [2017-05-17 创建随机的 MAC 地址](/2017/05/17/creating-random-mac-addresses)
