(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -933,3 +933,9 @@ tags:
 * [2017-05-15 将二进制字符串转为整形](/2017/05/15/converting-binary-string-to-integer)
 * [2017-05-16 按位移位](/2017/05/16/bitwise-shift)
 * [2017-05-17 创建随机的 MAC 地址](/2017/05/17/creating-random-mac-addresses)
+* [2017-05-18 验证整形变量](/2017/05/18/validating-integer-variables)
+* [2017-05-19 转义通配符](/2017/05/19/escape-wildcards)
+* [2017-05-22 请注意 ToString() 方法](/2017/05/22/careful-with-tostring)
+* [2017-05-23 冒充 ToString() 方法](/2017/05/23/tostring-masquerade)
+* [2017-05-24 生成随机密码](/2017/05/24/generating-random-password)
+* [2017-05-25 搜索 AD 用户](/2017/05/25/searching-for-adusers)
