(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -939,3 +939,7 @@ tags:
 * [2017-05-23 冒充 ToString() 方法](/2017/05/23/tostring-masquerade)
 * [2017-05-24 生成随机密码](/2017/05/24/generating-random-password)
 * [2017-05-25 搜索 AD 用户](/2017/05/25/searching-for-adusers)
+* [2017-05-26 克隆 DHCP 服务器设置](/2017/05/26/cloning-dhcp-server-settings)
+* [2017-05-29 验证变量有效性](/2017/05/29/validating-variables)
+* [2017-05-30 测试 OU](/2017/05/30/testing-organizational-unit)
+* [2017-05-31 查找 OU](/2017/05/31/finding-organizational-units)
