(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -944,3 +944,7 @@ tags:
 * [2017-05-29 验证变量有效性](/2017/05/29/validating-variables)
 * [2017-05-30 测试 OU](/2017/05/30/testing-organizational-unit)
 * [2017-05-31 查找 OU](/2017/05/31/finding-organizational-units)
+
+2017 年 06 月
+-------------
+* [2017-06-01 安全地删除数据](/2017/06/01/safely-deleting-data)
