(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -948,3 +948,13 @@ tags:
 2017 年 06 月
 -------------
 * [2017-06-01 安全地删除数据](/2017/06/01/safely-deleting-data)
+* [2017-06-02 映射网络驱动器](/2017/06/02/mapping-network-drives)
+* [2017-06-05 强制刷新客户端时间](/2017/06/05/force-client-time-resync)
+* [2017-06-06 Read-Host 阻塞自动化操作](/2017/06/06/read-host-blocks-automation)
+* [2017-06-07 重要的 PowerShell 变量](/2017/06/07/important-powershell-variables)
+* [2017-06-08 远程创建 SMB 共享](/2017/06/08/creating-smb-shares-remotely)
+* [2017-06-09 More 命令的现代版替代品](/2017/06/09/modern-alternative-to-more)
+* [2017-06-12 查看函数源码](/2017/06/12/spying-on-function-source-code)
+* [2017-06-13 在计划任务中运行 PowerShell 脚本](/2017/06/13/running-powershell-script-as-a-scheduled-task)
+* [2017-06-14 查找一个脚本块中的所有变量](/2017/06/14/finding-all-variables-in-a-script-block)
+* [2017-06-15 查找一个脚本中的所有变量](/2017/06/15/finding-all-variables-in-a-script)
