(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -958,3 +958,5 @@ tags:
 * [2017-06-13 在计划任务中运行 PowerShell 脚本](/2017/06/13/running-powershell-script-as-a-scheduled-task)
 * [2017-06-14 查找一个脚本块中的所有变量](/2017/06/14/finding-all-variables-in-a-script-block)
 * [2017-06-15 查找一个脚本中的所有变量](/2017/06/15/finding-all-variables-in-a-script)
+* [2017-06-16 设置时区](/2017/06/16/setting-time-zone)
+* [2017-06-19 检查夏时制](/2017/06/19/check-for-daylight-savings-time)
