(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -964,3 +964,8 @@ tags:
 * [2017-06-21 获取端口分配列表](/2017/06/21/get-list-of-port-assignments)
 * [2017-06-22 使用缓存的端口文件](/2017/06/22/using-cached-port-file)
 * [2017-06-23 显示文件夹树](/2017/06/23/displaying-folder-tree)
+* [2017-06-26 清空 DNS 缓存](/2017/06/26/flush-dns-cache)
+* [2017-06-27 神秘的 Windows 10 透明模式](/2017/06/27/secret-windows-10-transparency-mode)
+* [2017-06-28 PowerShell 中 LINQ 的真实情况](/2017/06/28/truth-about-linq-in-powershell)
+* [2017-06-29 每日问候](/2017/06/29/greetings-of-the-day)
+* [2017-06-30 每日问候（带语音）](/2017/06/30/greetings-of-the-day-with-voice)
