(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -969,3 +969,8 @@ tags:
 * [2017-06-28 PowerShell 中 LINQ 的真实情况](/2017/06/28/truth-about-linq-in-powershell)
 * [2017-06-29 每日问候](/2017/06/29/greetings-of-the-day)
 * [2017-06-30 每日问候（带语音）](/2017/06/30/greetings-of-the-day-with-voice)
+
+2017 年 07 月
+-------------
+* [2017-07-03 读取注册表键值失败](/2017/07/03/reading-registry-values-fails)
+* [2017-07-04 读取注册表键值（临时解决办法）](/2017/07/04/reading-registry-values-workaround)
